[package]
name = "pinentry"
version = "0.1.0"
edition = "2021"

[dependencies]
# wgpu renders translucency correctly; tiny-skia is the software fallback and needs "wayland" for softbuffer.
iced = { version = "0.14", default-features = false, features = ["wgpu", "tiny-skia", "thread-pool", "wayland", "canvas"] }
iced_layershell = { version = "0.18", default-features = false }
