[package]
name = "keyring-prompter"
version.workspace = true
edition = "2021"
license.workspace = true

[[bin]]
name = "psst-keyring-prompter"
path = "src/main.rs"

[dependencies]
ui = { path = "../ui" }
hardening = { path = "../hardening" }
crypto-bigint = "0.6"
sha2 = "0.10"
hkdf = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22"
rand = "0.8"
zeroize = "1"
serde_json = "1"
futures-util = "0.3"
# async-io executor, not tokio: gpui's ashpd runs zbus on a non-tokio thread and
# Cargo unifies features workspace-wide, so enabling `tokio` here makes it panic.
zbus = { version = "5" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
